// protoc -I proto/ proto/executor.proto --go_out=plugins=grpc:dkron/
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package dkron;

message Execution {
  // Name of the job this executions refers to.
  string job_name = 1;
  google.protobuf.Timestamp started_at = 2;
  google.protobuf.Timestamp finished_at = 3;
  bool success = 4;
  bytes output = 5;
  string node_name = 6;
  int64 group = 7;
  uint32 attempt = 8;
}

message ExecutorArgs {
  Execution execution = 1;
  PluginConfig config = 2;
}

message PluginConfig {
  map<string, google.protobuf.Any> config = 1;
}

message ExecuteRequest {
    ExecutorArgs executor_args = 1;
}

message ExecuteResponse {
    string error = 1;
}

service Executor {
    rpc Execute (ExecuteRequest) returns (ExecuteResponse);
    rpc GetConfig() returns (PluginConfig);
}
